# xv6-rust

./: .gitignore  .readthedocs.yml  .travis.yml  AGENTS.md  Cargo.toml  Doxyfile  Makefile  README.md  bio.c  console.c  defs.h  dot-bochsrc  halt.c  i386.json  init.c  ioapic.c  main.c  meson.build  run-curses.sh  run-tmux.sh  setup.sh  sh.c  stat.h  xv6_tmux.conf
.cargo/: config.toml
docs/: Doxyfile  Makefile  build_docs.sh
docs/source/: conf.py  index.rst
docs/sphinx/source/: api.rst  conf.py  index.rst
src/: allocator.rs  arch.rs  console.rs  cpu_features.rs  file.rs  fpu_state.rs  ioapic.rs  kbd.rs  lapic.rs  lib.rs  meson.build  mmu.rs  pipe.rs  proc.rs  simd_integration.rs  simd_mem.rs  simd_string.rs  spinlock.rs  syscall.rs  sysproc.rs  uart.rs
src/sync/: mod.rs  primitives.rs  ticket_lock.rs
