[package]
name = "xv6"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bitfield = "0.13.*"
spin = "0.10.*"
x86 = "0.52.*"

[dependencies.lazy_static]
version = "1.5.*"
features = ["spin_no_std"]
