[package]
name = "xv6"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
opt-level = 3

[profile.release]
panic = "abort"
opt-level = 3

[dependencies]
bitfield = "0.19"
spin = "0.10.*"
x86 = "0.52.*"
bytemuck = { version = "1.14", default-features = false, features = ["derive"] }
zerocopy = { version = "0.8", default-features = false, features = ["derive"] }
linked_list_allocator = { version = "0.10", default-features = false, features = ["use_spin"] }
buddy_system_allocator = { version = "0.9", default-features = false, features = ["use_spin"] }
critical-section = "1.2.0"
target-lexicon = "0.13.2"
raw-cpuid = { version = "11.1.0", default-features = false }
cfg-if = "1.0.0"

[dependencies.lazy_static]
version = "1.5.*"
features = ["spin_no_std"]

[features]
default = ["alloc_linked_list"]

alloc_linked_list = []
alloc_buddy_system = []

simd_sse2 = []
simd_sse3 = []
simd_sse4_1 = []

fpu_x87 = []
fpu_sse = []

alloc_debug = [] # New feature for allocator debugging
simd_debug_print = [] # For debug prints in SIMD/allocator modules

oom_panic_handler = [] # Preserved
